# easy-nhl

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  conference.rst  division.rst  game.rst  index.rst  installation.rst  introduction.rst  player.rst  schedule.rst  team.rst
easy_nhl/: __init__.py  base_url.py  conference.py  division.py  game.py  player.py  schedule.py  team.py
