[metadata]
name = easy-nhl
version = 0.2
description = Making it easier to use the NHL API in python projects.
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/branks42/easy-nhl
author = Justin Branco
author_email = jbranco@nd.edu 
license = MIT  
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: